--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,11 +3,11 @@
 <head>
     <title>Document</title>
 </head>
-<body style="margin: 0; padding: 0;">
+<body style="margin: 0; padding: 0; margin-top: 0;">
     <header style="background-color: #FF0000; height: 70px; width: 100%;">
 </header>
-    <footer style="background-color: #00FF00; height: 60px; width: 100;">
-    <p text-aling="center">Holberton School</p></footer>
+    <footer style="background-color: #00FF00; height: 60px; width: 100%;">
+    <p style="text-align: center;">Holberton School</p></footer>
     
 </body>
 </html>
