--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>AirBnB clone</title>
 </head>
-<body style="margin: 0; padding: 0; margin-top: 0;">
+<body>
     <header style="background-color: #FF0000; height: 70px; width: 100%;">
 </header>
-    <footer style="background-color: #00FF00; height: 60px; width: 100%;">
+    <footer style="background-color: #00FF00; height: 60px; width: 100%; position: fixed; bottom: 0">
     <p style="text-align: center;">Holberton School</p></footer>
     
 </body>
